--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 * {
     padding: 0;
     margin: 0;
+    font-family: 'Barlow', sans-serif;
     box-sizing: border-box;
 
 }
@@ -8,7 +9,271 @@
 .home {
     height: 100vh;
     width: 100%;
+    background-image: url(../media/background.jpg);
     background-size: cover;
     background-position: center;
-    background-image: url(../media/background.jpg);
+}
+
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 45px;
+    padding-left: 8%;
+    padding-right: 8%;
+}
+
+.logo {
+    color: rgb(245, 141, 176);
+    font-size: 100px;
+    letter-spacing: 1px;
+    cursor: pointer;
+
+}
+
+span {
+    color: rgb(253, 95, 148);
+}
+
+nav ul li {
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    padding: 4px 1px;
+
+}
+
+nav ul li a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    text-transform: capitalize;
+    border-radius: 10px;
+    background-color: palevioletred;
+    border: 2px solid transparent;
+}
+
+nav ul li a:hover {
+    color: palevioletred;
+    transition: .4s;
+}
+
+
+h1 {
+    color: rgb(253, 95, 148);
+    margin: 10px 0px 20px;
+    font-size: 75px;
+}
+
+h2 {
+    color: rgb(253, 95, 148);
+}
+
+h5{
+    color: rgb(253, 95, 148);
+    margin: 10px 0px 20px;
+    font-size: medium;
+    font-weight: bold;
+}
+h6{
+    color: rgb(253, 95, 148);
+    margin: 10px 0px 20px;
+    font-size: medium;
+    font-weight: bold;
+}
+
+.sobre {
+    width: 100%;
+    padding: 100px 0%;
+    background-color: #d3a2b1;
+}
+
+img {
+    height: auto;
+    width: 300px;
+    margin-right: 10px;
+}
+
+.about-text {
+    width: 500px;
+}
+
+.main {
+    width: 1130px;
+    max-width: 95%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.about-text h2 {
+    color: white;
+    font-size: 75px;
+    text-transform: capitalize;
+    margin-bottom: 20px;
+}
+
+.about-text p {
+    color: pink;
+    letter-spacing: 1px;
+    line-height: 28px;
+    font-size: 18px;
+    margin-bottom: 45px;
+}
+
+button {
+    background-color: palevioletred;
+    color: white;
+    text-decoration: none;
+    border: 2px solid transparent;
+    font-weight: bold;
+    padding: 13px 30px;
+    border-radius: 30px;
+    transition: .4s;
+}
+
+button:hover {
+    background-color: transparent;
+    border: 2px solid palevioletred;
+    cursor: pointer;
+}
+
+.skills{
+    width: 100%;
+    max-width: 600px;
+    padding: 0 20px;
+  }
+  
+  .skill-name{
+    font-size: 18px;
+    font-weight: 700;
+    color: #f1f1f1;
+    text-transform: uppercase;
+    margin: 20px 0;
+  }
+  
+  .skill-bar{
+    height: 14px;
+    background: #282828;
+    border-radius: 3px;
+  }
+  
+  .skill-per{
+    height: 14px;
+    background: #aa16aa;
+    border-radius: 3px;
+    position: relative;
+    animation: fillBars 2.5s 1;
+  }
+  
+  .skill-per::before{
+    content: attr(per);
+    position: absolute;
+    padding: 4px 6px;
+    background: #f1f1f1;
+    border-radius: 4px;
+    font-size: 12px;
+    top: -35px;
+    right: 0;
+    transform: translateX(50%);
+  }
+  
+  .skill-per::after{
+    content: "";
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    background: #f1f1f1;
+    top: -20px;
+    right: 0;
+    transform: translateX(50%) rotate(45deg);
+    border-radius: 2px;
+  }
+  
+  @keyframes fillBars{
+    from{
+      width: 0;
+    }
+    to{
+      width: 100%;
+    }
+  }
+  .skills-prog{
+    padding-left: 50%;
+    
+  }
+
+h3{
+    color: white;
+    font-size: 50px;
+    margin-bottom: 25px;
+    font-weight: bold;
+}
+
+
+.pra p {
+    color: pink;
+    font-size: 16px;
+    line-height: 27px;
+    margin-top: 25px;
+}
+
+.button {
+    background-color: palevioletred;
+    color: white;
+    text-decoration: none;
+    border: 2px solid transparent;
+    font-weight: bold;
+    padding: 9px 22px;
+    border-radius: 30px;
+    transition: .4s;
+}
+
+.button:hover {
+    background-color: transparent;
+    border: palevioletred;
+    cursor: pointer;
+}
+
+footer {
+    position: relative;
+    width: 100%;
+    height: 150px;
+    background: #83165e;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.social {
+    display: flex;
+}
+
+.social a {
+    width: 45px;
+    height: 45px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: palevioletred;
+    border-radius: 50%;
+    margin: 22px 10px;
+    color: white;
+    text-decoration: none;
+    font-size: 20px;
+
+}
+
+.social a:hover {
+    transform: scale(1.8);
+    transition: .3s;
+}
+
+.end {
+    position: absolute;
+    color: palevioletred;
+    bottom: 35px;
+   
 }
